fix: fixed overflow for grid carts

--- a/src/components/ui/carts/grid-carts/GridCarts.module.scss
+++ b/src/components/ui/carts/grid-carts/GridCarts.module.scss
@@ -2,7 +2,8 @@
 	display: flex;
 	flex-direction: column;
 	gap: 15px;
-	overflow: auto;
+	overflow-y: auto;
+	overflow-x: hidden;
 	height: calc(100vh - 230px);
 
 	&::-webkit-scrollbar {
